store registry literal